# vrr-flicker-test

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  imgui.ini  toolchain-mingw32.cmake  vrr_flicker_test
build-win32/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
